# marketplace-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  start-agent.sh  user_profile.json
agent/: __init__.py  __main__.py  config.py  display.py  gates.py  main.py  memory.py  retry.py  state.py  tools.py  ui.py  validation.py
docs/: prod_breaking_points.md  swapping-marketplaces.md
mcp_server/: action_log.py  adapter.py  guardrails.py  profile.py  server.py
mcp_server/adapters/: uber.py
server/: app.py  models.py  simulation.py
tests/: test_memory.py  test_simulation.py  test_tools.py
transcripts/: 01-happy-path.md  02-price-comparison.md  03-bad-address.md  04-surge-edge-case.md  05-cancellation.md  06-route-feasibility.md  07-duplicate-and-same-address.md
