[project]
name = "marketplace-agent"
version = "0.1.0"
description = "AI agent that books rides end-to-end via swappable marketplace adapters"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "geopy>=2.4.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
harness = [
    "anthropic>=0.50.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
